# hildon-control-panel-personalisation

./: AUTHORS  Makefile.am  README  TODO  configure.ac  libpersonalisation.c  personalisation.c  personalisation.desktop  personalisation_app.c
debian/: changelog  control  hildon-control-panel-personalisation.init  hildon-control-panel-personalisation.install  hildon-control-panel-personalisation.service
